
cmake_minimum_required(VERSION 2.8.3)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)

if (${PYTHON_VERSION_MAJOR} EQUAL 3)
    FIND_PACKAGE(Boost COMPONENTS python3)
else()
    FIND_PACKAGE(Boost COMPONENTS python)
endif()

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES}) # Deprecated but so convenient!


PYTHON_ADD_MODULE(operators operators.cpp)



